$Id$                       -*-text-*-


**** 0.77 [unreleased]

Fix rt.cpan.org #96035
 
 	Insert missing plan 'no-plan' in 10-recurse.t

Fix inefficient Net::DNS::SEC compatibility code


**** 0.76 May 23, 2014

Fix rt.cpan.org #95738

	Test failure with IPv6 address in resolver.conf but without
	prerequisite IO::Socket::INET6 package installed.

Fix rt.cpan.org #95596

	Incorrect parsing of nameserver lines in resolv.conf

Feature rt.cpan.org #79568

	Implement prefer_v6 resolver configuration attribute.

Fix rt.cpan.org #67602

	Set resolver configuration defaults at first instantiation
	instead of module load time.


**** 0.75 May 8, 2014

Fix rt.cpan.org #94069

	Compile-time constant in Domain.pm/Text.pm cannot be used to
	store pointer to encoding object when using perlcc compiler.
	Thanks are due to Reini Urban for testing the revised code.

Fix rt.cpan.org #93764

	Resolver gives unhelpful errorstring when attempting to use
	IPv6-only nameserver without INET6 and Socket6 installed.

Fix rt.cpan.org #92626

	Clarify documentation surrounding SRV RR sorting

Feature

	Implement TSIG verified zone transfer.

Fix rt.cpan.org #92433 & #91241

	TSIG: implement sign/verify for multi-packet message.

Fix rt.cpan.org #79569

	Iterate nameservers in AXFR


**** 0.74 Jan 16, 2014

Fix rt.cpan.org #91306

	Nameserver crashes on malformed UDP query.

Fix rt.cpan.org #91241

	TSIG: Fix incorrectly generated %algbyval table.

Feature

	Add CAA, EUI48 and EUI64 RR implementation.


**** 0.73 Nov 29, 2013

Fix rt.cpan.org #88778

	$update->unique_push() does not work as advertised.

Fix rt.cpan.org #88744

	Nameserver crashes on malformed TCP query.

Fix rt.cpan.org #84601/#81942

	Fix memory leak on packet cleanup. Indirect self-reference via
	header prevented garbage collector from deallocating packet.

Feature rt.cpan.org #84468

	TSIG: add support for HMAC-SHA1 .. HMAC-SHA512

Fix rt.cpan.org #84110

	Incorrect parsing of PTR records in zonefile.
